v1.1.12 : fix layout bug for expanded lancer mode

--- a/src/components/owlbear/MainOwlbear.scss
+++ b/src/components/owlbear/MainOwlbear.scss
@@ -14,6 +14,7 @@ $subwindow_height: 690px;
     &.expanded {
       display: flex;
       justify-content: space-around;
+      flex-wrap: wrap;
     }
 
     .roll-history-container {
